--- a/citywitch.html
+++ b/citywitch.html
@@ -21,7 +21,7 @@
                 <div class="projectlist">
                     <div class="gamepro">
                         <div class="projectimg">
-                            <video width="640" height="360" controls>
+                            <video width="640" height="360" autoplay controls>
                                 <source src="project/citywitch/CityWichTrailer.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
@@ -31,7 +31,7 @@
                             <hr>
                             <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
                             <button class="tag" style="background-color: #0889c9">2D Art</button>
-                            <button class="tag" style="background-color: #94bcd2">Creator</button>
+                            <button class="tag" style="background-color: #94bcd2">Director</button>
                             <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
                             <p>Embark on a magical journey in City Witch, a turn-based RPG where 
                                 players guide Remi, a young witch defending her city from disaster monsters. 
