--- a/littledream.html
+++ b/littledream.html
@@ -28,7 +28,7 @@
                             <hr>
                             <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
                             <button class="tag" style="background-color: #0889c9">2D Art</button>
-                            <button class="tag" style="background-color: #94bcd2">Creator</button>
+                            <button class="tag" style="background-color: #94bcd2">Director</button>
                             <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
                             <p>"Little Dream," initially a solo endeavor, transformed into a 
                                 poignant board game encapsulating childhood ambition, helplessness
@@ -41,7 +41,7 @@
                             </p>
                             <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Board game</li>
-                                <li>solo/4-person(2.0ver) project</li>
+                                <li>solo/4-person(2.0 ver) project</li>
                                 <li>Design and draw art assets</li>
                                 <li>Gameplay design</li>
                                 <li>Conceptualize narrative and settings</li>
