--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <p class="text">
                         Welcome to my portfolio, a curated showcase of my academic journey as a <b>Computer Science Games</b> major with a minor in
                         <b>Technical Game Art</b> at the University of Southern California. Explore my work for a comprehensive view of my proficiency in <button class="tag" style="background-color: #a5d19b">Coding</button>,
-                        <button class="tag" style="background-color: #0889c9">2D Art</button>, <button class="tag" style="background-color: #65c2eb">3D Modeling</button>, 
+                        <button class="tag" style="background-color: #0889c9">2D Art</button>, <button class="tag" style="background-color: #65c2eb">3D Art</button>, 
                         <button class="tag" style="background-color: #94bcd2">Game Design</button>, and <button class="tag" style="background-color: #5b9abc">Narrative</button> design.</p>
                     </div>
                 </div>
