--- a/littledream.html
+++ b/littledream.html
@@ -41,7 +41,7 @@
                             </p>
                             <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Board game</li>
-                                <li>solo/4-person(2.0 ver) project</li>
+                                <li>Team size: 1 -> 4 (2.0 ver)</li>
                                 <li>Design and draw art assets</li>
                                 <li>Gameplay design</li>
                                 <li>Conceptualize narrative and settings</li>
