--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,42 @@
                 </div>
                 <br>
                 <div class="projectlist">
+                    <div class="proimage" onclick="redirectToShepherds()">
+                        <img src="project/shepherds/shepherdscov.jpg" alt="Shepherds" class="codepic">
+                        <div class="overlay1">
+                            <div class="textc">
+                                <span style="font-weight: 300; font-size: 30px;">Shepherds 2024</span><br>
+                                <hr>
+                                <button class="tag" style="background-color: #0889c9">Artist</button>
+                                <button class="tag" style="background-color: #c8e2b8">UI Design</button><br>
+                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                    <li>Team size: 35~40</li>
+                                    <li>Create fictional language</li>
+                                    <li>UI/UX design</li>
+                                    <li>Draw 2D assets</li>
+                                </ul><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proimage" onclick="directToBrinkmanship()">
+                        <img src="project/brinkmanship/brinkmanshipcover.png" alt="Brinkmanship" class="codepic">
+                        <div class="overlay1">
+                            <div class="textc">
+                                <span style="font-weight: 300; font-size: 28px;">Brinkmanship 2024</span><br>
+                                <hr>
+                                <button class="tag" style="background-color: #0889c9">Artist</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
+                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                    <li>Team size: ~25</li>
+                                    <li>Model assets</li>
+                                    <li>Model and rig first-person model</li>
+                                    <li>Create first-person perspective animations</li>
+                                </ul><br>
+                            </div>
+                        </div>
+                    </div>
                     <div class="proimage" onclick="directToCitywitch()">
                         <img src="project/citywitch/Title_Page.jpg" alt="citywitch" class="codepic">
                         <div class="overlay1">
@@ -100,7 +136,7 @@
                                 <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Board game</li>
-                                    <li>Team size: 1 -> 4(2.0 ver)</li>
+                                    <li>Team size: 1 -> 4 (2.0 ver)</li>
                                     <li>Design and draw art assets</li>
                                     <li>Gameplay design</li>
                                     <li>Conceptualize narrative and settings</li>
@@ -116,46 +152,13 @@
                                 <hr>
                                 <button class="tag" style="background-color: #0889c9">Artist</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
-                                <button class="tag" style="background-color: #80cdf0">3D Animation</button><br>
+                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 30~35</li>
                                     <li>Develop models for all characters</li>
                                     <li>Establish rigs for all characters</li>
                                     <li>Produce animations for all character</li>
-                                </ul><br>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="proimage">
-                        <img src="project/shepherds/shepherdscov.jpg" alt="Shepherds" class="codepic">
-                        <div class="overlay1">
-                            <div class="textc">
-                                <span style="font-weight: 300; font-size: 30px;">Shepherds 2024</span><br>
-                                <hr>
-                                <button class="tag" style="background-color: #0889c9">Artist</button>
-                                <button class="tag" style="background-color: #c8e2b8">UI Design</button><br>
-                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
-                                    <li>Team size: 35~40</li>
-                                    <li>Create fictional language</li>
-                                    <li>UI/UX design</li>
-                                </ul><br>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="proimage" onclick="directToBrinkmanship()">
-                        <img src="project/brinkmanship/brinkmanshipcover.png" alt="Brinkmanship" class="codepic">
-                        <div class="overlay1">
-                            <div class="textc">
-                                <span style="font-weight: 300; font-size: 28px;">Brinkmanship 2024</span><br>
-                                <hr>
-                                <button class="tag" style="background-color: #0889c9">Artist</button>
-                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
-                                <button class="tag" style="background-color: #80cdf0">3D Animation</button><br>
-                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
-                                    <li>Team size: ~25</li>
-                                    <li>Model assets</li>
-                                    <li>Model and rig first-person model</li>
-                                    <li>Create first-person perspective animations</li>
                                 </ul><br>
                             </div>
                         </div>
@@ -199,6 +202,10 @@
 
         function directToBrinkmanship() {
             window.location.href = 'brinkmanship.html';
+        }
+
+        function redirectToShepherds() {
+            window.location.href = 'shepherds.html';
         }
     </script>
 
