pig and chikin update

--- a/projects.html
+++ b/projects.html
@@ -144,11 +144,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="proimage">
-                        <img src="project/pigandchicken/pccov.jpg" alt="pig&chicken" class="codepic">
+                    <div class="proimage" onclick="redirectToPigandchikin()">
+                        <img src="project/pigandchikin/pccov.jpg" alt="pig&chikin" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
-                                <span style="font-weight: 300; font-size: 28px;">Pig & Chicken 2024</span><br>
+                                <span style="font-weight: 300; font-size: 28px;">Pig & Chikin 2024</span><br>
                                 <hr>
                                 <button class="tag" style="background-color: #0889c9">Artist</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
@@ -158,7 +158,7 @@
                                     <li>Team size: 30~35</li>
                                     <li>Develop models for all characters</li>
                                     <li>Establish rigs for all characters</li>
-                                    <li>Produce animations for all character</li>
+                                    <li>Produce most animations for characters</li>
                                 </ul><br>
                             </div>
                         </div>
@@ -206,6 +206,10 @@
 
         function redirectToShepherds() {
             window.location.href = 'shepherds.html';
+        }
+
+        function redirectToPigandchikin() {
+            window.location.href = 'pigandchikin.html';
         }
     </script>
 
