--- a/citywitch.html
+++ b/citywitch.html
@@ -64,6 +64,7 @@
                         <img src="project/citywitch/endscene2.jpg" alt="end2" class="thumbnail" onclick="openPopup('project/citywitch/endscene2.jpg')">
                         <img src="project/citywitch/endscene3.jpg" alt="end3" class="thumbnail" onclick="openPopup('project/citywitch/endscene3.jpg')">
                         <img src="project/citywitch/finalscene.jpg" alt="fin" class="thumbnail" onclick="openPopup('project/citywitch/finalscene.jpg')">
+                        <img src="project/citywitch/ui.JPG" alt="ui" class="thumbnail" onclick="openPopup('project/citywitch/ui.JPG')">
                     </div>
                     <br>
                     <div style="display: flex;">
@@ -119,7 +120,8 @@
             'project/citywitch/endscene1.jpg',
             'project/citywitch/endscene2.jpg',
             'project/citywitch/endscene3.jpg',
-            'project/citywitch/finalscene.jpg'
+            'project/citywitch/finalscene.jpg',
+            'project/citywitch/ui.JPG'
         ];
 
     var currentIndex = 0;
