--- a/citywitch.html
+++ b/citywitch.html
@@ -64,7 +64,19 @@
                         <img src="project/citywitch/endscene2.jpg" alt="end2" class="thumbnail" onclick="openPopup('project/citywitch/endscene2.jpg')">
                         <img src="project/citywitch/endscene3.jpg" alt="end3" class="thumbnail" onclick="openPopup('project/citywitch/endscene3.jpg')">
                         <img src="project/citywitch/finalscene.jpg" alt="fin" class="thumbnail" onclick="openPopup('project/citywitch/finalscene.jpg')">
-                        <img src="project/citywitch/ui.JPG" alt="ui" class="thumbnail" onclick="openPopup('project/citywitch/ui.JPG')">
+                        <img src="project/citywitch/ui.jpg" alt="ui" class="thumbnail" onclick="openPopup('project/citywitch/ui.jpg')">
+                        <img src="project/citywitch/buttons.png" alt="buttons" class="thumbnail" onclick="openPopup('project/citywitch/buttons.png')">
+                        <img src="project/citywitch/hatlogo.png" alt="hatlogo" class="thumbnail" onclick="openPopup('project/citywitch/hatlogo.png')">
+                        <img src="project/citywitch/remigame.png" alt="remigame" class="thumbnail" onclick="openPopup('project/citywitch/remigame.png')">
+                        <img src="project/citywitch/eringame.png" alt="eringame" class="thumbnail" onclick="openPopup('project/citywitch/eringame.png')">
+                        <img src="project/citywitch/sashagame.png" alt="sashagame" class="thumbnail" onclick="openPopup('project/citywitch/sashagame.png')">
+                        <img src="project/citywitch/firework.gif" alt="firework" class="thumbnail" onclick="openPopup('project/citywitch/firework.gif')">
+                        <img src="project/citywitch/bloom.gif" alt="bloom" class="thumbnail" onclick="openPopup('project/citywitch/bloom.gif')">
+                        <img src="project/citywitch/wave.gif" alt="wave" class="thumbnail" onclick="openPopup('project/citywitch/wave.gif')">
+                        <img src="project/citywitch/crane.gif" alt="crane" class="thumbnail" onclick="openPopup('project/citywitch/crane.gif')">
+                        <img src="project/citywitch/plant.gif" alt="plant" class="thumbnail" onclick="openPopup('project/citywitch/plant.gif')">
+                        <img src="project/citywitch/drop.gif" alt="drop" class="thumbnail" onclick="openPopup('project/citywitch/drop.gif')">
+                        <img src="project/citywitch/smoke.gif" alt="smoke" class="thumbnail" onclick="openPopup('project/citywitch/smoke.gif')">
                     </div>
                     <br>
                     <div style="display: flex;">
@@ -121,7 +133,19 @@
             'project/citywitch/endscene2.jpg',
             'project/citywitch/endscene3.jpg',
             'project/citywitch/finalscene.jpg',
-            'project/citywitch/ui.JPG'
+            'project/citywitch/ui.jpg',
+            'project/citywitch/buttons.png',
+            'project/citywitch/hatlogo.png',
+            'project/citywitch/remigame.png',
+            'project/citywitch/eringame.png',
+            'project/citywitch/sashagame.png',
+            'project/citywitch/firework.gif',
+            'project/citywitch/bloom.gif',
+            'project/citywitch/wave.gif',
+            'project/citywitch/crane.gif',
+            'project/citywitch/plant.gif',
+            'project/citywitch/drop.gif',
+            'project/citywitch/smoke.gif',
         ];
 
     var currentIndex = 0;
